--- a/config.html
+++ b/config.html
@@ -84,26 +84,39 @@
     <div id="izchat-status"></div>
   </div>
 
-  <!-- Banco de Ruas (DENTRO do container, ANTES de fechar) -->
+  <!-- Autocomplete de Ruas -->
   <div class="card">
-    <h2>🗺️ Banco de Ruas — Campo Grande/MS</h2>
-    <p style="font-size:13px;color:#64748b;margin-bottom:12px">
-      Importa todas as ruas de Campo Grande via OpenStreetMap. Precisa fazer <strong>apenas uma vez</strong> (ou quando quiser atualizar).
-      O import roda em <strong>background</strong> (~60s). Depois o autocomplete de endereço funciona com qualquer palavra — "rio", "mato", "av", etc.
-    </p>
-    <div style="display:flex;align-items:center;gap:12px;flex-wrap:wrap">
-      <button onclick="importStreets()" id="btnImportStreets"
-        style="background:#6366f1;color:#fff;border:none;border-radius:8px;padding:10px 20px;font-size:14px;font-weight:700;cursor:pointer">
-        ⬇️ Importar / Atualizar Ruas
-      </button>
-      <div id="streetsStatus" style="font-size:13px;color:#64748b"></div>
+    <h2>🗺️ Autocomplete de Endereço</h2>
+
+    <div id="streetsStatus" style="font-size:13px;color:#64748b;margin-bottom:12px">⏳ Verificando banco local...</div>
+
+    <div style="background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:12px;font-size:13px;color:#1e40af;margin-bottom:14px">
+      ✅ <strong>Nominatim ao vivo ativado</strong> — autocomplete já funciona sem importar nada!<br>
+      <span style="font-size:12px;color:#3b82f6">O Worker busca ruas via OpenStreetMap em tempo real. O banco local (import) é opcional e torna a busca mais rápida.</span>
     </div>
-    <div id="streetsProgress" style="display:none;margin-top:12px">
-      <div style="background:#e2e8f0;border-radius:99px;height:8px;overflow:hidden">
-        <div id="streetsBar" style="background:#6366f1;height:100%;width:0%;transition:width 0.5s"></div>
+
+    <div style="display:flex;gap:8px;margin-bottom:10px">
+      <input id="streetTestInput" placeholder="Teste: digite 'Rio Branco' ou 'Afonso Pena'" style="flex:1;margin-bottom:0">
+      <button onclick="testStreetSearch()" class="btn btn-green" style="white-space:nowrap;padding:10px 16px">🔍 Testar</button>
+    </div>
+    <div id="streetTestResult" style="font-size:13px;min-height:20px"></div>
+
+    <details style="margin-top:16px">
+      <summary style="cursor:pointer;font-size:13px;color:#64748b;font-weight:600;user-select:none">⚙️ Import local (opcional — busca instantânea)</summary>
+      <div style="margin-top:10px;padding-top:10px;border-top:1px solid #f1f5f9">
+        <p style="font-size:12px;color:#94a3b8;margin-bottom:10px">Importa todas as ruas de Campo Grande para o banco D1. Pode demorar 2–3 minutos.</p>
+        <button onclick="importStreets()" id="btnImportStreets"
+          style="background:#6366f1;color:#fff;border:none;border-radius:8px;padding:10px 20px;font-size:14px;font-weight:700;cursor:pointer">
+          ⬇️ Importar Ruas de CG
+        </button>
+        <div id="streetsProgress" style="display:none;margin-top:12px">
+          <div style="background:#e2e8f0;border-radius:99px;height:8px;overflow:hidden">
+            <div id="streetsBar" style="background:#6366f1;height:100%;width:0%;transition:width 0.5s"></div>
+          </div>
+          <div id="streetsMsg" style="font-size:12px;color:#64748b;margin-top:6px">Aguardando...</div>
+        </div>
       </div>
-      <div id="streetsMsg" style="font-size:12px;color:#64748b;margin-top:6px">Aguardando...</div>
-    </div>
+    </details>
   </div>
 
 </div><!-- /container -->
@@ -333,7 +346,26 @@ async function importStreets() {
   }
 }
 
-// ── Init ──────────────────────────────────────────────────────
+// ── Teste de busca de ruas ───────────────────────────────────
+async function testStreetSearch() {
+  const q = document.getElementById('streetTestInput').value.trim();
+  const el = document.getElementById('streetTestResult');
+  if (!q) { el.innerHTML = '<span style="color:#dc2626">Digite uma rua para testar</span>'; return; }
+  el.innerHTML = '<span style="color:#94a3b8">🔍 Buscando...</span>';
+  try {
+    const results = await api(`/api/streets/search?q=${encodeURIComponent(q)}`);
+    if (!results || !results.length) {
+      el.innerHTML = `<span style="color:#f97316">⚠️ Nenhuma rua encontrada para "${q}"</span>`;
+    } else {
+      el.innerHTML = `<span style="color:#16a34a">✅ ${results.length} rua(s) encontrada(s):</span><br>` +
+        results.slice(0,5).map(r => `<span style="color:#334155;margin-left:8px">• ${r.name}${r.bairro ? ' — ' + r.bairro : ''}</span>`).join('<br>');
+    }
+  } catch(e) {
+    el.innerHTML = `<span style="color:#dc2626">❌ ${e.message}</span>`;
+  }
+}
+
+// ── Init ─────────────────────────────────────────────────────
 loadDrivers();
 checkStreetsCount();
 </script>
